mvp presque ok